Config for Tablet Landscape mode

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="cards">
             <div class="card-one">
                 <img src="./images/information-card-one.jpg" alt="card-one-image">
-                <p>Outdoors durnig any time of the day</p>
+                <p>Outdoors during any time of the day</p>
             </div>
             <div class="card-two">
                 <img src="./images/information-card-two.jpg" alt="card-two-image">
@@ -43,7 +43,7 @@
             </div>
             <div class="card-four">
                 <img src="./images/information-card-four.jpg" alt="card-four-image">
-                <p>A natural feel for all pictures</p>
+                <p>A natural extraction for all pictures</p>
             </div>
         </div>
     </div>
